Lisatud sendDocument päringule teavituste saatmise funktsionaalsus (oleks pidanud juba algselt olema). Eemaldatud kood, mis muutis vastussõnumite Content-type päise valeks.